--- a/SampleApp/AirlineInfo/package.json
+++ b/SampleApp/AirlineInfo/package.json
@@ -19,7 +19,8 @@
     "dev": "webpack-dashboard --title 'Elm Dev Server' -- npm run webpack-dev-server -- --env.mode development",
     "elm-analyse": "elm-analyse -s -o",
     "preprod": "rimraf dist",
-    "lint": "stylelint src/assets/styles"
+    "lint": "stylelint src/assets/styles",
+    "github-pages": "yarn run prod --env.asset_path='/elm-quantum-parchment/'; yarn run push-dir --dir=dist/ --branch=gh-pages;"
   },
   "license": "MIT",
   "browserslist": [
@@ -57,6 +58,7 @@
     "webpack-cli": "^3.2.1",
     "webpack-dashboard": "^2.0.0",
     "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "push-dir": "^0.4.1"
   }
 }
